Update and rename README.md to README

--- a/README
+++ b/README
@@ -2,4 +2,7 @@
 | zorgverzekering-ion-channel |
 -------------------------------
 
+# ion channel
+https://en.wikipedia.org/wiki/Ion_channel
+
 2002-2028
